--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "twitcher-js",
-  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
@@ -10,15 +8,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~43.0.2",
-    "expo-status-bar": "~1.1.0",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "@react-navigation/material-top-tabs": "^5.3.10",
+    "@react-navigation/native": "^6.0.0-next.13",
+    "@react-navigation/stack": "^5.12.8",
+    "axios": "^0.21.4",
+    "dayjs": "^1.10.7",
+    "eslint": "^7.17.0",
+    "expo": "^41.0.1",
+    "expo-sqlite": "~9.1.0",
+    "expo-status-bar": "~1.0.4",
+    "moment": "^2.29.1",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
+    "react-native-appearance": "^0.3.4",
+    "react-native-date-input": "^1.0.11",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-numeric-input": "^1.9.0",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-vector-icons": "^9.0.0",
+    "react-native-web": "^0.17.5",
+    "react-navigation": "^4.4.4",
+    "react-navigation-tabs": "^2.10.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "~7.9.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "private": true
 }
